# skreg

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml  docker-compose.dev.yml  kind-config.yaml
.githooks/: pre-commit
certs/: root-ca.pem
crates/skillpkg-cli/: Cargo.toml
crates/skillpkg-cli/src/: config.rs  installer.rs  lib.rs  main.rs
crates/skillpkg-cli/src/commands/: login.rs  mod.rs  pack.rs  publish.rs
crates/skillpkg-cli/tests/: installer_test.rs
crates/skillpkg-client/: Cargo.toml
crates/skillpkg-client/src/: client.rs  error.rs  lib.rs
crates/skillpkg-client/tests/: client_test.rs
crates/skillpkg-core/: Cargo.toml
crates/skillpkg-core/src/: lib.rs  manifest.rs  package_ref.rs  types.rs
crates/skillpkg-core/tests/: installed_test.rs  manifest_test.rs  package_ref_test.rs  types_test.rs
crates/skillpkg-crypto/: Cargo.toml
crates/skillpkg-crypto/src/: error.rs  lib.rs  revocation.rs  verifier.rs
crates/skillpkg-crypto/tests/: verifier_test.rs
crates/skillpkg-pack/: Cargo.toml
crates/skillpkg-pack/src/: error.rs  lib.rs  pack.rs  unpack.rs
crates/skillpkg-pack/tests/: pack_test.rs
crates/skreg-api/: Cargo.toml  Dockerfile
crates/skreg-api/migrations/: 001_initial.sql  002_package_search.sql  003_auth.sql  004_publisher_certs_namespace_idx.sql  005_trust_enforcement.sql
crates/skreg-api/src/: auth.rs  config.rs  db.rs  email.rs  lib.rs  main.rs  middleware.rs  models.rs  router.rs
crates/skreg-api/src/handlers/: auth.rs  cert.rs  diff.rs  jobs.rs  mod.rs  namespaces.rs  packages.rs  preview.rs  publish.rs  rotate.rs  search.rs  yank.rs
crates/skreg-api/tests/: health_test.rs  packages_test.rs  search_test.rs
crates/skreg-api/tests/fixtures/: pss-ca.key  pss-ca.pem
crates/skreg-api/wix/: main.wxs
crates/skreg-cli/: Cargo.toml
crates/skreg-cli/src/: config.rs  frontmatter.rs  installer.rs  keys.rs  lib.rs  linker.rs  main.rs
crates/skreg-cli/src/commands/: certify.rs  context.rs  diff.rs  install.rs  links.rs  login.rs  mod.rs  pack.rs  publish.rs  rotate.rs  search.rs  tui.rs  uninstall.rs  yank.rs
crates/skreg-cli/tests/: installer_test.rs
crates/skreg-cli/wix/: main.wxs
crates/skreg-client/: Cargo.toml
crates/skreg-client/src/: client.rs  installer.rs  lib.rs  linker.rs
crates/skreg-client/tests/: client_test.rs
crates/skreg-core/: Cargo.toml
crates/skreg-core/src/: config.rs  installed.rs  lib.rs  limits.rs  manifest.rs  types.rs  verification.rs  version.rs
crates/skreg-core/tests/: installed_test.rs  manifest_test.rs  package_ref_test.rs  types_test.rs
crates/skreg-crypto/: Cargo.toml
crates/skreg-crypto/src/: error.rs  lib.rs  revocation.rs  verifier.rs
crates/skreg-crypto/tests/: verifier_test.rs
crates/skreg-dispatcher/: Cargo.toml  Dockerfile
crates/skreg-dispatcher/src/: job.rs  main.rs
crates/skreg-pack/: Cargo.toml
crates/skreg-pack/src/: error.rs  lib.rs  pack.rs  unpack.rs
crates/skreg-pack/tests/: pack_test.rs
crates/skreg-tui/: Cargo.toml
crates/skreg-tui/src/: app.rs  lib.rs  theme.rs
crates/skreg-tui/src/views/: context.rs  detail.rs  installed.rs  mod.rs  packages.rs
crates/skreg-tui/src/widgets/: footer.rs  header.rs  help.rs  mod.rs  toast.rs
crates/skreg-worker/: Cargo.toml  Dockerfile
crates/skreg-worker/rules/credentials/: harvest.yar  package_manager_creds.yar  wallet_harvest.yar
crates/skreg-worker/rules/malware/: README.md  blockchain_c2.yar  proc_mem_read.yar  systemd_persistence.yar
crates/skreg-worker/rules/scripts/: destructive.yar  encrypted_exfil.yar  execution.yar  reverse_shell.yar
crates/skreg-worker/src/: email.rs  lib.rs  main.rs  runner.rs
crates/skreg-worker/src/stages/: content.rs  mod.rs  safety.rs  signing.rs  structure.rs  verify_publisher.rs
crates/skreg-worker/src/stages/static_analysis/: hooks.rs  mod.rs  pass1.rs  pass2.rs  startup.rs
crates/skreg-worker/tests/: corpus_integration_test.rs  integration_static_analysis.rs  structure_test.rs
crates/skreg-worker/tests/fixtures/: bad_aws_creds.py  bad_curl_bash.sh  bad_destructive.sh  bad_hook_command.md  bad_privileged.sh  bad_reverse_shell.py
crates/skreg-worker/wix/: main.wxs
infra/: .coverage  .gitignore  Pulumi.main.yaml  Pulumi.yaml  README.md  __main__.py  pyproject.toml
infra/src/skillpkg_infra/: __main__.py  config.py
infra/src/skillpkg_infra.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
infra/src/skillpkg_infra/components/: compute.py  database.py  network.py  pki.py  storage.py
infra/src/skillpkg_infra/providers/aws/: compute.py  database.py  network.py  oidc.py  pki.py  storage.py
infra/src/skreg_infra/: __main__.py  config.py  contracts.py  dispatch.py
infra/src/skreg_infra/components/: database.py  network.py  pki.py
infra/src/skreg_infra/providers/aws/: compute.py  database.py  dns.py  network.py  oidc.py  pki.py  storage.py  substrate.py  web_hosting.py  worker_trigger.py
infra/src/skreg_infra/providers/azure/: database.py  dns.py  storage.py  substrate.py
infra/src/skreg_infra/providers/gcp/: database.py  dns.py  storage.py  substrate.py
infra/src/skreg_infra/providers/k8s/: ci.py  compute.py  database.py  database_cnpg.py  dispatcher.py  dns.py  dns_updater.py  email.py  network.py  pki.py  registry.py  stack.py  storage.py
infra/src/skreg_infra/providers/substrate/: existing.py
infra/tests/: test_aws_compute.py  test_aws_database.py  test_aws_network.py  test_aws_oidc.py  test_aws_pki.py  test_aws_provider.py  test_aws_storage.py  test_aws_web_hosting.py  test_aws_worker_trigger.py  test_azure_provider.py  test_components.py  test_config.py  test_contracts.py  test_dispatch.py  test_gcp_provider.py  test_k8s_ci_dns.py  test_k8s_compute.py  test_k8s_database.py  test_k8s_database_cnpg.py  test_k8s_dispatcher.py  test_k8s_network.py  test_k8s_stack.py  test_k8s_storage.py  test_k8s_supporting.py  test_substrate_existing.py
scripts/: bootstrap.sh  create-db-minio-secrets.sh  create-smtp-relay-secret.sh  dns-updater.py  seed-dev.sql
web/: .gitignore  index.html  (+3 more)
(+42 files in other folders)
