[workspace]
members = [
    "crates/skillpkg-core",
    "crates/skillpkg-crypto",
    "crates/skillpkg-pack",
    "crates/skillpkg-client",
    "crates/skillpkg-cli",
    "crates/skreg-api",
    "crates/skreg-worker",
]
resolver = "2"

[workspace.dependencies]
tokio       = { version = "1", features = ["full"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
thiserror   = "1"
anyhow      = "1"
log         = "0.4"
semver      = { version = "1", features = ["serde"] }
uuid        = { version = "1", features = ["v4", "serde"] }
chrono      = { version = "0.4", features = ["serde"] }
axum        = { version = "0.7", features = ["macros"] }
sqlx        = { version = "0.7", features = ["postgres", "runtime-tokio", "uuid", "chrono", "macros"] }
reqwest     = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }
sha2        = "0.10"
x509-cert   = "0.2"
der         = "0.7"
rcgen       = "0.12"
env_logger  = "0.10"

[profile.release]
strip = true
lto   = true
