[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skillpkg_infra"]

[project]
name = "skillpkg-infra"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pulumi>=3,<4",
    "pulumi-aws>=6,<7",
    "pulumi-gcp>=7,<8",
    "pulumi-azure-native>=2,<3",
    "pulumi-random>=4,<5",
    "pydantic-settings>=2,<3",
    "structlog>=24,<25",
    "cryptography>=42,<43",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "mypy>=1.9",
    "ruff>=0.4",
    "black>=24",
    "pulumi[testing]>=3,<4",
]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ANN", "N", "S", "B", "C4"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
strict = true
python_version = "3.12"
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=skillpkg_infra --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
omit = ["*/skillpkg_infra/__main__.py"]
