[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skreg_infra"]

[project]
name = "skreg-infra"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pulumi>=3,<4",
    "pulumi-aws>=6,<7",
    "pulumi-kubernetes>=4,<5",
    "pulumi-gcp>=7,<8",
    "pulumi-azure-native>=2,<3",
    "pulumi-random>=4,<5",
    "pydantic-settings>=2,<3",
    "structlog>=24,<25",
    "cryptography>=42,<43",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "mypy>=1.9",
    "ruff>=0.4",
    "black>=24",
    "pulumi[testing]>=3,<4",
]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ANN", "N", "S", "B", "C4"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
strict = true
python_version = "3.12"
mypy_path = "src"
# Subclassing pulumi.ComponentResource (Any once the stubs are skipped below)
# must remain allowed without weakening strictness on our own code.
disallow_subclassing_any = false

# The pulumi provider packages ship very large generated type stubs. Deep
# analysis of all of them under `strict` exhausts the CI runner's memory
# (mypy is OOM-killed mid-run). Skip following these imports — they are
# treated as Any — which keeps mypy fast and bounded while preserving strict
# type-checking across the project's own modules.
[[tool.mypy.overrides]]
module = [
    "pulumi.*",
    "pulumi_aws.*",
    "pulumi_azure_native.*",
    "pulumi_gcp.*",
    "pulumi_kubernetes.*",
    "pulumi_random.*",
]
follow_imports = "skip"
follow_imports_for_stubs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=skreg_infra --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
omit = ["*/skreg_infra/__main__.py"]
