[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skreg_infra"]

[project]
name = "skreg-infra"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pulumi>=3,<4",
    "pulumi-aws>=6,<7",
    "pulumi-kubernetes>=4,<5",
    "pulumi-gcp>=7,<8",
    "pulumi-azure-native>=2,<3",
    "pulumi-random>=4,<5",
    "pydantic-settings>=2,<3",
    "structlog>=24,<25",
    "cryptography>=42,<43",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "mypy>=1.9",
    "ruff>=0.4",
    "black>=24",
    "pulumi[testing]>=3,<4",
]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ANN", "N", "S", "B", "C4"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
strict = true
python_version = "3.12"
mypy_path = "src"

# Pulumi provider packages contain tens-of-thousands of generated Python files.
# Asking mypy to follow imports into them causes multi-minute hangs (pulumi-azure-native
# alone unpacks to ~764 MB / 32 000 files). Skip them — our code is still fully
# type-checked; we only stop mypy from crawling the provider internals.
[[tool.mypy.overrides]]
module = [
    "pulumi_aws",
    "pulumi_aws.*",
    "pulumi_azure_native",
    "pulumi_azure_native.*",
    "pulumi_gcp",
    "pulumi_gcp.*",
    "pulumi_kubernetes",
    "pulumi_kubernetes.*",
    "pulumi_random",
    "pulumi_random.*",
]
ignore_missing_imports = true
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=skreg_infra --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
omit = ["*/skreg_infra/__main__.py"]
