[package]
name    = "skillpkg-client"
version = "0.1.0"
edition = "2021"

[dependencies]
skillpkg-core   = { path = "../skillpkg-core" }
skillpkg-crypto = { path = "../skillpkg-crypto" }
thiserror       = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
log             = { workspace = true }
reqwest         = { workspace = true }
tokio           = { workspace = true }
