[package]
name    = "skillpkg-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
semver     = { workspace = true }
uuid       = { workspace = true }
chrono     = { workspace = true }
sha2       = { workspace = true }
