[package]
name    = "skillpkg-pack"
version = "0.1.0"
edition = "2021"

[dependencies]
skillpkg-core = { path = "../skillpkg-core" }
thiserror     = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
sha2          = { workspace = true }
log           = { workspace = true }
flate2        = { workspace = true }
tar           = { workspace = true }

[dev-dependencies]
tempfile = "3"
