[package]
name    = "skreg-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "skreg-api"
path = "src/main.rs"

[dependencies]
skillpkg-core   = { path = "../skillpkg-core" }
skillpkg-crypto = { path = "../skillpkg-crypto" }
skillpkg-pack   = { path = "../skillpkg-pack" }
anyhow          = { workspace = true }
tokio           = { workspace = true }
axum            = { workspace = true }
sqlx            = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
thiserror       = { workspace = true }
log             = { workspace = true }
env_logger      = { workspace = true }
uuid            = { workspace = true }
chrono          = { workspace = true }
tower-http      = { version = "0.5", features = ["trace", "cors"] }
jsonwebtoken    = "9"
