[package]
name    = "skreg-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "skreg-api"
path = "src/main.rs"

[lib]
name = "skreg_api"
path = "src/lib.rs"

[dependencies]
skillpkg-core   = { path = "../skillpkg-core" }
skillpkg-crypto = { path = "../skillpkg-crypto" }
skillpkg-pack   = { path = "../skillpkg-pack" }
anyhow          = { workspace = true }
tokio           = { workspace = true }
axum            = { workspace = true, features = ["multipart"] }
sqlx            = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
thiserror       = { workspace = true }
log             = { workspace = true }
env_logger      = { workspace = true }
uuid            = { workspace = true }
chrono          = { workspace = true }
tower-http      = { version = "0.5", features = ["trace", "cors"] }
jsonwebtoken    = "9"
aws-config      = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3      = "1"
aws-sdk-sesv2   = "1"
rand            = "0.8"
sha2            = { workspace = true }
hex             = "0.4"

[dev-dependencies]
axum-test = "14"
tokio     = { workspace = true }
