[package]
name    = "skreg-client"
version = "0.1.0"
edition = "2021"

[dependencies]
skreg-core   = { path = "../skreg-core" }
skreg-crypto = { path = "../skreg-crypto" }
thiserror       = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
log             = { workspace = true }
reqwest         = { workspace = true }
tokio           = { workspace = true }
