[package]
name    = "skreg-client"
version = "0.4.0"
edition = "2021"

[dependencies]
skreg-core   = { path = "../skreg-core" }
skreg-crypto = { path = "../skreg-crypto" }
skreg-pack   = { path = "../skreg-pack" }
thiserror       = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
log             = { workspace = true }
reqwest         = { workspace = true }
tokio           = { workspace = true }
sha2            = { workspace = true }
hex             = "0.4"
tempfile        = "3"
anyhow          = { workspace = true }
toml            = "0.8"
chrono          = { workspace = true }
dirs            = "5"
