[package]
name    = "skreg-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
skreg-core = { path = "../skreg-core" }
thiserror     = { workspace = true }
log           = { workspace = true }
x509-cert     = { workspace = true }
der           = { workspace = true }
sha2          = { workspace = true }
rsa           = { version = "0.9", features = ["sha2", "pem"] }
rand          = "0.8"
hex           = "0.4"

[dev-dependencies]
rcgen = { workspace = true }
rand  = "0.8"
hex   = "0.4"
