[package]
name    = "skreg-pack"
version = "0.1.0"
edition = "2021"

[dependencies]
skreg-core = { path = "../skreg-core" }
thiserror     = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
sha2          = { workspace = true }
log           = { workspace = true }
flate2        = { workspace = true }
tar           = { workspace = true }
tempfile      = "3"

[dev-dependencies]
