[package]
name    = "skreg-pack"
version = "0.2.0"
edition = "2021"

[dependencies]
skreg-core = { path = "../skreg-core" }
thiserror     = { workspace = true }
anyhow        = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
sha2          = { workspace = true }
log           = { workspace = true }
flate2        = { workspace = true }
tar           = { workspace = true }
tempfile      = "3"

[dev-dependencies]
semver = { workspace = true }
