[package]
name = "skreg-tui"
version = "0.1.5"
edition = "2021"

[dependencies]
ratatui = "0.29"
tokio = { workspace = true }
skreg-client = { path = "../skreg-client" }
skreg-core = { path = "../skreg-core" }
anyhow = { workspace = true }
serde = { workspace = true }
dirs = "5"
serde_json = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }

[dev-dependencies]
tempfile = "3"
