[package]
name    = "skreg-worker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "skreg-worker"
path = "src/main.rs"

[lib]
name = "skreg_worker"
path = "src/lib.rs"

[dependencies]
skreg-core   = { path = "../skreg-core" }
skreg-crypto = { path = "../skreg-crypto" }
skreg-pack   = { path = "../skreg-pack" }
anyhow          = { workspace = true }
tokio           = { workspace = true }
sqlx            = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
thiserror       = { workspace = true }
log             = { workspace = true }
env_logger      = { workspace = true }
uuid            = { workspace = true }
chrono          = { workspace = true }
walkdir                 = "2"
aws-config              = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3              = "1"
aws-sdk-secretsmanager  = "1"
hex                     = "0.4"
sha2                    = { workspace = true }
rand                    = "0.8"
rsa                     = { version = "0.9", features = ["sha2", "pem"] }
tempfile                = "3"

[dev-dependencies]
