[package]
name    = "skreg-worker"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/dymocaptin/skreg"
description = "The background vetting and signing pipeline for Skreg"
license = "Apache 2.0"
authors = ["dymocaptin"]
homepage = "https://skreg.ai"

[package.metadata.wix]
upgrade-guid = "CB28A81E-BABC-4453-AA9D-8AF19BD3A72C"
path-guid = "B019CB58-2626-4142-BF09-DFBB1B23AE5C"
license = false
eula = false

[[bin]]
name = "skreg-worker"
path = "src/main.rs"

[lib]
name = "skreg_worker"
path = "src/lib.rs"

[dependencies]
skreg-core   = { path = "../skreg-core" }
skreg-crypto = { path = "../skreg-crypto" }
skreg-pack   = { path = "../skreg-pack" }
anyhow          = { workspace = true }
tokio           = { workspace = true }
sqlx            = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
thiserror       = { workspace = true }
log             = { workspace = true }
env_logger      = { workspace = true }
uuid            = { workspace = true }
chrono          = { workspace = true }
walkdir                 = "2"
aws-config              = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3              = "1"
aws-sdk-secretsmanager  = "1"
hex                     = "0.4"
sha2                    = { workspace = true }
rand                    = "0.8"
rsa                     = { version = "0.9", features = ["sha2", "pem"] }
tempfile                = "3"

[dev-dependencies]
